# Programa-de-Edicion-de-Fotos

./: CMakeLists.txt  README.md
src/: Image.cpp  Image.h  Pixel.cpp  Pixel.h  main.cpp
